# swagger/swagger.yml
@@ -126,6 +126,64 @@ paths:
           description: '{string} delete success!'
         "404":
           description: not found resource
+  /saldo/:
+    get:
+      tags:
+      - saldo
+      description: get Saldo
+      operationId: SaldoController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Saldo'
+        "403":
+          description: ""
+  /saldo/{id}:
+    get:
+      tags:
+      - saldo
+      description: get Saldo by id
+      operationId: SaldoController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Saldo'
+        "403":
+          description: :id is empty
   /transaccion/:
     get:
       tags:
@@ -278,6 +336,25 @@ definitions:
       Valor:
         type: number
         format: double
+  models.Saldo:
+    title: Saldo
+    type: object
+    properties:
+      Credito:
+        type: number
+        format: double
+      CuentaId:
+        type: string
+      Debito:
+        type: number
+        format: double
+      FechaCreacion:
+        type: string
+      FechaModificacion:
+        type: string
+      Id:
+        type: integer
+        format: int64
   models.Transaccion:
     title: Transaccion
     type: object
@@ -313,3 +390,6 @@ tags:
 - name: movimiento
   description: |
     MovimientoController operations for Movimiento
+- name: saldo
+  description: |
+    SaldoController operations for Saldo
